--- a/Offline-CDN/Views/Home/Offline.cshtml
+++ b/Offline-CDN/Views/Home/Offline.cshtml
@@ -1,10 +1,8 @@
-﻿@{
-    ViewBag.Title = "CDN Service";
+﻿
+@{
     //Layout = null;
 }
 
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
     /* Basic Reset */
     body, h1, p {
@@ -21,20 +19,18 @@
         background-color: black;
         color: #FFFFFF;
         text-align: center;
-        line-height: 1.6;
     }
 
     .container {
         padding: 20px;
         background: #121212;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         max-width: 600px;
     }
 
     h1 {
-        font-size: 24px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         color: #4CAF50;
     }
 
@@ -42,24 +38,33 @@
         font-size: 16px;
     }
 
-    /* Responsive design adjustments */
     @@media (max-width: 768px) {
         .container {
-            padding: 10px;
-            font-size: 14px;
+            padding: 15px;
         }
         h1 {
-            font-size: 18px;
+            font-size: 22px;
+        }
+        p {
+            font-size: 14px;
         }
     }
 
 </style>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App Offline</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
     <div class="container">
-        <h1>Content Delivery Network</h1>
-        <p>
-            A 1 server CDN is a basic content delivery network setup that uses a single server strategically located to cache and efficiently deliver content to users in its proximity.
-        </p>
+        <h1>We're currently offline</h1>
+        <p>Our application is undergoing scheduled maintenance. We appreciate your patience and apologize for any inconvenience. Please check back soon!</p>
     </div>
 </body>
+</html>
 
