Adding Identity and Resotring old pages

--- a/CDN/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/CDN/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<CDNUser> SignInManager
+﻿@using CDN.Data.Tables
+@inject SignInManager<CDNUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
