--- a/CDN/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/CDN/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using CDN.Areas.Identity
 @using CDN.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using CDN.Areas.Identity.Data
+@using CDN.Data
