--- a/CDN/Views/Shared/_LoginPartial.cshtml
+++ b/CDN/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@    using Microsoft.AspNetCore.Identity
-@    using CDN.Areas.Identity.Data
+﻿@using Microsoft.AspNetCore.Identity
+@using CDN.Data.Tables
 
 @inject SignInManager<CDNUser> SignInManager
 @inject UserManager<CDNUser> UserManager
