--- a/CDN/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CDN/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
-    Response.Redirect("/");
+    Response.Redirect("/Admin");
 }
 
 <h1>@ViewData["Title"]</h1>
