--- a/CDN/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/CDN/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -2,6 +2,7 @@
 @model RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
+    Response.Redirect("/Admin");
 }
 
 <h1>@ViewData["Title"]</h1>
