--- a/CDN/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/CDN/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -2,6 +2,7 @@
 @model ResendEmailConfirmationModel
 @{
     ViewData["Title"] = "Resend email confirmation";
+    Response.Redirect("/Admin");
 }
 
 <h1>@ViewData["Title"]</h1>
